Fixing background on mobile and nav links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -375,7 +375,7 @@ li:hover {
 	height: auto;
 }
 
-.grid-container-7 {
+.grid-container-6 {
 	display: grid;
 	grid-template-columns: auto auto auto auto auto auto;
 	justify-content: space-evenly;
@@ -530,7 +530,7 @@ footer p{
 }
 
 @media only screen and (max-width: 1130px) {
-	.grid-container-7 {
+	.grid-container-6 {
 		grid-template-columns: auto auto;
 	}
 }
@@ -539,7 +539,7 @@ footer p{
 	/*----------Home----------*/
 	#Home {
 		height: 100vh;
-		background-image: url("../img/bg-mobile1.jpg");
+		background-image: url("../img/bg-mobile.jpg");
 		background-color: rgb(52, 1, 67);
 		background-position: center;
 		background-repeat: no-repeat;
